Fix scrollbar in service cart button.

--- a/styles/service-cart.less
+++ b/styles/service-cart.less
@@ -1,7 +1,7 @@
 #service-cart.overlay {
   z-index: 1000; // falls behind the search
   max-height: 100vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   ul {
     border-radius: 2px;
